--- a/index.html
+++ b/index.html
@@ -2,28 +2,124 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VILLA PROJECT</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <div class="villa">
-            <h1>VILLA</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="properties">Properties</a></li>
-                <li><a href="property details">Property Details</a></li>
-                <li><a href="contact us">Contact Us</a></li>
-            </ul>
-            
-        </nav>
-    </header>
+  <header>
+    <div class="heading">
+      <div class="about">
+        <ul>
+          <li><i class="fa-solid fa-envelope"></i> info@company.com</li>
+          <li><i class="fa-solid fa-map"></i> Sunny Isles Beach,FL 33160</li>
+        </ul>
+      </div>
+      <!-- social media icons -->
+      <div class="icons">
+        <ul>
+          <li><i class="fa-brands fa-facebook"></i></li>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-linkedin"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+        </ul>
+      </div>
+    </div>
 
+    <div class="villa">
+      <h1>VILLA</h1>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./properties.html">Properties</a></li>
+          <li><a href="./propertydetails.html">Property Details</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li class="schedule"><i class="fa-solid fa-calendar"></i> Schedule a visit </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- /NAV BAR FOR SMALL SCREENS -->
+     <div class="small">
+     <nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">VILLA</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">VILLA</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./properties.html">PROPERTY</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="./propertydetails.html">PROPERTY DETAILS</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="./contact.html">CONTACT US</a>
+          </li>
+           <li class="schedule"><i class="fa-solid fa-calendar"></i> Schedule a visit </li>
+      </div>
+    </div>
+  </div>
+</nav>
+</div>
+  </header>
+
+
+  <!--caurosel -->
+
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./assests/images/banner-01.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./assests/images/banner-02.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./assests/images/banner-03.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="content ">
+       <p class="toronto">Toronto,</p><p class="canada">Canada</p>
+        <h5>HURRY! <br>
+            GET THE BEST <br> 
+            VILLA FOR YOU</h5>
+      </div>
+
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
