--- a/index.html
+++ b/index.html
@@ -45,39 +45,42 @@
         </ul>
       </nav>
     </div>
-    <!-- /NAV BAR FOR SMALL SCREENS -->
-     <div class="small">
-     <nav class="navbar bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">VILLA</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">VILLA</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./properties.html">PROPERTY</a>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" href="./propertydetails.html">PROPERTY DETAILS</a>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" href="./contact.html">CONTACT US</a>
-          </li>
-           <li class="schedule"><i class="fa-solid fa-calendar"></i> Schedule a visit </li>
-      </div>
+    <!-- NAV BAR FOR SMALL SCREENS -->
+
+    <div class="small">
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">VILLA</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">VILLA</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./properties.html">PROPERTY</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./propertydetails.html">PROPERTY DETAILS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contact.html">CONTACT US</a>
+                </li>
+                <li class="schedule"><i class="fa-solid fa-calendar"></i> Schedule a visit </li>
+            </div>
+          </div>
+        </div>
+      </nav>
     </div>
-  </div>
-</nav>
-</div>
   </header>
 
 
@@ -86,13 +89,13 @@
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assests/images/banner-01.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/images/banner-01.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./assests/images/banner-02.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/images/banner-02.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./assests/images/banner-03.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/images/banner-03.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -104,15 +107,129 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <!-- content -->
+
   <div class="content ">
-       <p class="toronto">Toronto,</p><p class="canada">Canada</p>
-        <h5>HURRY! <br>
-            GET THE BEST <br> 
-            VILLA FOR YOU</h5>
+    <p class="toronto">Toronto,</p>
+    <p class="canada">Canada</p>
+    <h5>HURRY! <br>
+      GET THE BEST <br>
+      VILLA FOR YOU</h5>
+  </div>
+
+  <br><br><br><br><br>
+  <!-- features  -->
+
+  <div class="container">
+    <img src="./assets/images/featured.jpg" alt="">
+    <div class="feature">
+      <span>| FEATURED</span>
+      <h2>Best Appartment <br>& Sea View</h2>
+
+      <!-- ACCORDIAN -->
+
+      <div class="links">
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                Best useful links?
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Get <strong>the best villa</strong> website template in HTML CSS and Bootstrap for your business.XYZ
+                provides you the <span style="color: blue;">best service</span> in the world.Please tell your friends
+                about it.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                How does this work?
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe provident enim, iure porro sapiente
+                repellendus?
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Why is villa Agency the best?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, quae veniam necessitatibus ab officia
+                ullam.
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+
+    <!-- INFO DETAILS -->
+
+    <div class="details">
+      <div class="space">
+        <img src="./assets/images/info-icon-01.png" alt="">
+        <div class="info">
+          <h4>250 m2</h4>
+          <p>Total Flat Space</p>
+        </div>
+      </div>
+      <div class="space">
+        <img src="./assets/images/info-icon-02.png" alt="">
+        <div class="info">
+          <h4>Contract</h4>
+          <p>Contract Ready</p>
+        </div>
+      </div>
+      <div class="space">
+        <img src="./assets/images/info-icon-03.png" alt="">
+        <div class="info">
+          <h4>Payment</h4>
+          <p>Payment Process</p>
+        </div>
+      </div>
+      <div class="space">
+        <img src="./assets/images/info-icon-04.png" alt="">
+        <div class="info">
+          <h4>Saftey</h4>
+          <p>24/7 Under Control</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- feature icon -->
+  <div class="featured-icon">
+    <img src="./assets/images/featured-icon.png" alt="">
+  </div>
 
 
 
+  <!-- video background -->
+   <section>
+  <div class="video">
+    <img src="./assets/images/video-bg.jpg" alt="">
+    <div class="video-text">
+      <p>|VIDEO VIEW</p>
+      <h2>Get Closer View &<br> Different Feeling</h2>
+    </div>
+  </div>
+  </section>
 
 
 
