--- a/index.html
+++ b/index.html
@@ -221,15 +221,19 @@
 
 
   <!-- video background -->
-   <section>
+
   <div class="video">
     <img src="./assets/images/video-bg.jpg" alt="">
     <div class="video-text">
       <p>|VIDEO VIEW</p>
       <h2>Get Closer View &<br> Different Feeling</h2>
+      <img src="./assets/images/video-frame.jpg" alt="" id="video-frame">
     </div>
+    <i class="fa-solid fa-play" id="play-icon"></i>
   </div>
-  </section>
+
+
+
 
 
 
