--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
   <!-- content -->
 
   <div class="content ">
-    <p class="toronto">Toronto,</p>
-    <p class="canada">Canada</p>
+    <p class="place">Toronto,<span style="color: orangered;">Canada</span></p>
     <h5>HURRY! <br>
       GET THE BEST <br>
       VILLA FOR YOU</h5>
@@ -126,6 +125,8 @@
     <div class="feature">
       <span>| FEATURED</span>
       <h2>Best Appartment <br>& Sea View</h2>
+      <br>
+
 
       <!-- ACCORDIAN -->
 
@@ -202,7 +203,7 @@
           <p>Payment Process</p>
         </div>
       </div>
-      <div class="space">
+      <div class="space" style="border-bottom: none;">
         <img src="./assets/images/info-icon-04.png" alt="">
         <div class="info">
           <h4>Saftey</h4>
@@ -231,9 +232,262 @@
     </div>
     <i class="fa-solid fa-play" id="play-icon"></i>
   </div>
+  <br>
+  <br>
+  <br>
 
+  <!-- ACHIEVEMENT -->
+  <div class="achieve">
+    <div class="box">
+      <span>34</span>
+      <p>Buildings <br> Finished Now</p>
+      <div class="circle"></div>
+    </div>
+    <div class="box">
+      <span>12</span>
+      <p>years <br> Experience</p>
+      <div class="circle"></div>
+    </div>
+    <div class="box">
+      <span>24</span>
+      <p>Awwards <br> Won 2023</p>
+      <div class="circle"></div>
+    </div>
+  </div>
+  <br><br><br>
+  <!-- BEST DEAL -->
+  <div class="best">
+    <div class="deal">
+      <div class="find">
+        <span>|BEST DEAL</span>
+        <h3>Find Your Best Deal <br> Right Now!</h3>
+      </div>
+      <div class="apt">
+        <button style="background-color: orangered;">Appartment</button>
+        <button>Villa House</button>
+        <button>Penthouse</button>
+      </div>
+    </div>
+    <br>
+    <!-- FLAT DETAILS -->
 
+    <div class="data">
+      <div class="flat">
+        <div class="home">
+          <p>Toatal Flat Space</p>
+          <h5>185 m2</h5>
+        </div>
+        <div class="home">
+          <p>Floor number</p>
+          <h5>26th</h5>
+        </div>
+        <div class="home">
+          <p>Number of rooms</p>
+          <h5>4</h5>
+        </div>
+        <div class="home">
+          <p>Parking Available</p>
+          <h5>Yes</h5>
+        </div>
+        <div class="home">
+          <p>Payment Process</p>
+          <h5>Bank</h5>
+        </div>
+      </div>
+      <img src="./assets/images/deal-01.jpg" alt="">
+      <div class="extra-info">
+        <h5>Extra Info About Property</h5>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam maxime voluptas assumenda, corrupti
+          commodi illo nisi libero asperiores labore! Deserunt.</p>
+        <p>When you need best websites,you can simple type XYZ in any search engine website.In addition,you can type Xyz
+          Portfolio,XYZ One Page Layouts,etc.</p>
+        <span class="schedule"><i class="fa-solid fa-calendar"></i> Schedule a visit </span>
+      </div>
+    </div>
+  </div>
 
+  <br><br><br><br>
+
+  <div class="properties">
+    <span>|PROPERTIES</span>
+    <h3>We Provide The Best <br>Property You Like</h3>
+  </div>
+
+  <br>
+  <br>
+  <!-- --------CARDS-------- -->
+  <div class="card-container">
+    <div class="cards">
+      <div class="card">
+        <!-- CARD 1 -->
+        <img src="./assets/images/property-01.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <div class="cost">
+            <span>Luxury Villa </span>
+            <p>$2.264.000</p>
+          </div>
+          <div class="card-title">
+            <h5>18 New Street Miami,OR 97219</h5>
+          </div>
+          <div class="rooms">
+            <ul>
+              <li>Bedrooms:<b>8</b></li>
+              <li>Bathrooms:<b>8</b></li>
+            </ul>
+          </div>
+          <div class="area">
+            <ul>
+              <li>Area:<b>542m2</b></li>
+              <li>Floor:<b>3</b></li>
+              <li>Parking:<b>6 spots</b></li>
+            </ul>
+          </div>
+        </div>
+        <span class="visit">Schedule a Visit </span>
+      </div>
+      <!-- CARD 2 -->
+      <div class="card">
+        <img src="./assets/images/property-02.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <div class="cost">
+            <span>Luxury Villa </span>
+            <p>$1.180.000</p>
+          </div>
+          <div class="card-title">
+            <h5>54 Mid Street Florida,OR 27001</h5>
+          </div>
+          <div class="rooms">
+            <ul>
+              <li>Bedrooms:<b>6</b></li>
+              <li>Bathrooms:<b>5</b></li>
+            </ul>
+          </div>
+          <div class="area">
+            <ul>
+              <li>Area:<b>450m2</b></li>
+              <li>Floor:<b>3</b></li>
+              <li>Parking:<b>8 spots</b></li>
+            </ul>
+          </div>
+        </div>
+        <span class="visit">Schedule a Visit </span>
+      </div>
+
+      <div class="card">
+        <!-- CARD 3 -->
+        <img src="./assets/images/property-03.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <div class="cost">
+            <span>Luxury Villa </span>
+            <p>$1.460.000</p>
+          </div>
+          <div class="card-title">
+            <h5>26 Old Street Miami,OR 38540</h5>
+          </div>
+          <div class="rooms">
+            <ul>
+              <li>Bedrooms:<b>5</b></li>
+              <li>Bathrooms:<b>4</b></li>
+            </ul>
+          </div>
+          <div class="area">
+            <ul>
+              <li>Area:<b>225m2</b></li>
+              <li>Floor:<b>3</b></li>
+              <li>Parking:<b>10 spots</b></li>
+            </ul>
+          </div>
+        </div>
+        <span class="visit">Schedule a Visit </span>
+      </div>
+    </div>
+    <br>
+    <!-- /CARDS GROUP 2 -->
+    <div class="cards">
+      <div class="card">
+        <!-- CARD 1 -->
+        <img src="./assets/images/property-04.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <div class="cost">
+            <span>Apartment </span>
+            <p>$584.000</p>
+          </div>
+          <div class="card-title">
+            <h5>12 New Street Miami,OR 12650</h5>
+          </div>
+          <div class="rooms">
+            <ul>
+              <li>Bedrooms:<b>4</b></li>
+              <li>Bathrooms:<b>3</b></li>
+              <li>Area: <b>125m2</b></li>
+            </ul>
+          </div>
+          <div class="area">
+            <ul>
+              <li>Floor:<b>25th</b></li>
+              <li>Parking:<b>2 cars</b></li>
+            </ul>
+          </div>
+        </div>
+        <span class="visit">Schedule a Visit </span>
+      </div>
+      <!-- CARD 2 -->
+      <div class="card">
+        <img src="./assets/images/property-05.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <div class="cost">
+            <span>Penthouse</span>
+            <p>$925.600</p>
+          </div>
+          <div class="card-title">
+            <h5>34 Beach Street Miami,Or 42680</h5>
+          </div>
+          <div class="rooms">
+            <ul>
+              <li>Bedrooms:<b>4</b></li>
+              <li>Bathrooms:<b>4</b></li>
+              <li>Area: <b>180m2</b></li>
+            </ul>
+          </div>
+          <div class="area">
+            <ul>
+              <li>Floor:<b>38th</b></li>
+              <li>Parking:<b>2 cars</b></li>
+            </ul>
+          </div>
+        </div>
+        <span class="visit">Schedule a Visit </span>
+      </div>
+
+      <div class="card">
+        <!-- CARD 3 -->
+        <img src="./assets/images/property-06.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <div class="cost">
+            <span>Moderen Condo</span>
+            <p>$450.000</p>
+          </div>
+          <div class="card-title">
+            <h5>22 Hope Street Portland,OR 16540</h5>
+          </div>
+          <div class="rooms">
+            <ul>
+              <li>Bedrooms:<b>3</b></li>
+              <li>Bathrooms:<b>2</b></li>
+              <li>Area: <b>165m2</b></li>
+            </ul>
+          </div>
+          <div class="area">
+            <ul>
+              <li>Floor:<b>26th</b></li>
+              <li>Parking:<b>3 cars</b></li>
+            </ul>
+          </div>
+        </div>
+        <span class="visit">Schedule a Visit </span>
+      </div>
+    </div>
+  </div>
 
 
 
