--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 
 
   <footer>
-    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: XYZ</p>
+    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: Srilekha</p>
   </footer>
 
 
