--- a/contact.html
+++ b/contact.html
@@ -2,17 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VILLA PROJECT</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VILLA PROJECT</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-     <header>
+  <header>
     <div class="heading">
       <div class="about">
         <ul>
@@ -43,7 +45,8 @@
         </ul>
       </nav>
     </div>
-    <!-- /NAV BAR FOR SMALL SCREENS -->
+    <!-- NAV BAR FOR SMALL SCREENS -->
+
     <div class="small">
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
@@ -79,6 +82,75 @@
       </nav>
     </div>
   </header>
+  <div class="place">
+    <img src="./assets/images/page-heading-bg.jpg" alt="">
+    <div class="house">
+      <span>HOME/PROPERTIES</span>
+      <h3>CONTACT US</h3>
+    </div>
+  </div>
+
+  <div class="contact">
+    <!-- enquire class starts here -->
+    <div class="enquire">
+      <span>|Contact us</span>
+      <h3>Get In Touch <br> With Our Agents</h3>
+      <p>When you really need to download best websites, please remember our website XYZ. Also,tell your friends about
+        our
+        website. Thank you for visiting. There is a variety of Bootstrap HTML CSS templates on our website. If you need
+        more information, please contact us.</p>
+      <div class="support">
+        <div class="phone">
+          <i class="fa-solid fa-phone-volume"></i>
+          <div class="number">
+            <h5><b>010-020-0340</b></h5>
+            <p>Phone Number</p>
+          </div>
+        </div>
+        <div class="mail">
+          <i class="fa-regular fa-envelope"></i>
+          <div class="business">
+            <h5><b>info@villa.com</b></h5>
+            <p>Business Email</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /enquire class ends here -->
+    <!-- form -->
+    <form action="">
+      <label for="name">Full Name</label>
+      <br>
+      <input type="text" id="name" name="name" placeholder="Your Name...">
+      <br>
+      <label for="email">Email Address</label>
+      <br>
+      <input type="email" id="email" name="email" placeholder="Your Email...">
+      <br>
+      <label for="sub">Subject</label>
+      <br>
+      <input type="text" id="sub" name="sub" placeholder="Subject...">
+      <br>
+      <label for="msg">Message</label>
+      <br>
+      <textarea name="" id="Address" rows="6" cols="44" placeholder="Your Message"></textarea>
+      <br>
+      <br>
+      <button id="send">Send Message</button>
+      <br>
+    </form>
+  </div>
+
+  <div class="map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25974.763880573853!2d-80.1445142023739!3d25.93913008593791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9acfee073549d%3A0xf4e74db7a5da487a!2sSunny%20Isles%20Beach%2C%20FL%2033160%2C%20USA!5e1!3m2!1sen!2sin!4v1757850615931!5m2!1sen!2sin"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <br><br><br><br>
+   <footer>
+    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: Srilekha</p>
+  </footer>
 
 </body>
 
