--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   <div class="best">
     <div class="deal">
       <div class="find">
-        <span>|BEST DEAL</span>
+        <span style="color: red;">|BEST DEAL</span>
         <h3>Find Your Best Deal <br> Right Now!</h3>
       </div>
       <div class="apt">
