--- a/propertydetails.html
+++ b/propertydetails.html
@@ -82,6 +82,192 @@
       </nav>
     </div>
   </header>
+  <div class="place">
+    <img src="./assets/images/page-heading-bg.jpg" alt="">
+    <div class="single">
+      <span>HOME/PROPERTIES</span>
+      <h3>SINGLE PROPERTY</h3>
+    </div>
+  </div>
+
+  <div class="residence">
+    <img src="./assets/images/single-property.jpg" alt="">
+    <div class="details">
+      <div class="space">
+        <img src="./assets/images/info-icon-01.png" alt="">
+        <div class="info">
+          <h4>250 m2</h4>
+          <p>Total Flat Space</p>
+        </div>
+      </div>
+      <div class="space">
+        <img src="./assets/images/info-icon-02.png" alt="">
+        <div class="info">
+          <h4>Contract</h4>
+          <p>Contract Ready</p>
+        </div>
+      </div>
+      <div class="space">
+        <img src="./assets/images/info-icon-03.png" alt="">
+        <div class="info">
+          <h4>Payment</h4>
+          <p>Payment Process</p>
+        </div>
+      </div>
+      <div class="space" style="border-bottom: none;">
+        <img src="./assets/images/info-icon-04.png" alt="">
+        <div class="info">
+          <h4>Saftey</h4>
+          <p>24/7 Under Control</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+  <div class="apartment-text">
+    <span style="background-color: #fbd9cf;">Apartment</span><br><br>
+    <h4>24 New Street Miami, OR 24560</h4>
+    <div class="para">
+      <p>Get the <b>best villa agency </b>HTML CSS Bootstrap Template for your company website. XYZ provides you
+        the
+        <span style="color: blue;">best
+          service </span>in
+        the world. Please tell your friends about it. Thank you. Cloud bread kogi bitters pitchfork shoreditch
+        tumblr yr succulents
+        single-origin coffee schlitz enamel pin you probably haven't heard of them ugh hella.
+      </p>
+      <p>When you look for best websites, you can simply type XYZ in any search engine website. In addition, you
+        can
+        type XYZ
+        Digital Marketing, XYZ Corporate Layouts, etc. Master cleanse +1 intelligentsia swag post-ironic,
+        slow-carb
+        chambray
+        knausgaard PBR&B DSA poutine neutra cardigan hoodie pop-up.</p>
+    </div>
+
+
+    <!-- ACCORDION -->
+    <div class="know-more">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne" style="color: orangered;">
+              Best useful links ?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Dolor <b>almesit amet</b>, consectetur adipiscing elit, sed doesn't eiusmod tempor kinfolk tonx
+              seitan
+              crucifix 3 wolf moon bicycle rights keffiyeh snackwave wolf same vice, chillwave vexillologist
+              incididunt
+              ut labore consectetur <span style="color: palevioletred;">adipiscing </span>elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna
+              aliqua.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              How does this work ?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, autem.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Why is Villa Agency the best ?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, cumque.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- BEST DEAL -->
+  <div class="best">
+    <div class="deal">
+      <div class="find">
+        <span style="color: red;">|BEST DEAL</span>
+        <h3>Find Your Best Deal <br> Right Now!</h3>
+      </div>
+      <div class="apt">
+        <button style="background-color: orangered;">Appartment</button>
+        <button>Villa House</button>
+        <button>Penthouse</button>
+      </div>
+    </div>
+    <br>
+    <!-- FLAT DETAILS -->
+
+    <div class="data">
+      <div class="flat">
+        <div class="home">
+          <p>Toatal Flat Space</p>
+          <h5>185 m2</h5>
+        </div>
+        <div class="home">
+          <p>Floor number</p>
+          <h5>26th</h5>
+        </div>
+        <div class="home">
+          <p>Number of rooms</p>
+          <h5>4</h5>
+        </div>
+        <div class="home">
+          <p>Parking Available</p>
+          <h5>Yes</h5>
+        </div>
+        <div class="home">
+          <p>Payment Process</p>
+          <h5>Bank</h5>
+        </div>
+      </div>
+      <img src="./assets/images/deal-01.jpg" alt="">
+      <div class="extra-info">
+        <h5>Extra Info About Property</h5>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam maxime voluptas assumenda, corrupti
+          commodi illo nisi libero asperiores labore! Deserunt.</p>
+        <p>When you need best websites,you can simple type XYZ in any search engine website.In addition,you can type Xyz
+          Portfolio,XYZ One Page Layouts,etc.</p>
+        <span class="schedule"><i class="fa-solid fa-calendar"></i> Schedule a visit </span>
+      </div>
+    </div>
+  </div>
+
+
+  <br><br><br>
+
+
+
+  <footer>
+    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: Srilekha</p>
+  </footer>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
