--- a/propertydetails.html
+++ b/propertydetails.html
@@ -64,7 +64,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./properties.html">PROPERTY</a>
@@ -179,7 +179,7 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, autem.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aliquid qui ad commodi. Molestiae corporis distinctio cumque in temporibus? Voluptas nobis eaque temporibus perferendis facere id quos architecto mollitia harum?
             </div>
           </div>
         </div>
@@ -192,7 +192,7 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, cumque.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae vel veniam, error tempore pariatur incidunt libero natus velit officia culpa maiores voluptas quasi alias corporis laboriosam! Repellat sunt deleniti officiis?
             </div>
           </div>
         </div>
