--- a/properties.html
+++ b/properties.html
@@ -90,7 +90,7 @@
       <h3>PROPERTIES</h3>
     </div>
   </div>
-  <div class="show">
+  <div class="list">
     <button style="background-color: orangered;">Show All</button>
     <button>Apartment</button>
     <button>Villa House</button>
