--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
   </div>
   <br><br><br><br>
    <footer>
-    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: Srilekha</p>
+    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: SRILEKHA JANGAM</p>
   </footer>
 
 
