--- a/propertydetails.html
+++ b/propertydetails.html
@@ -259,7 +259,7 @@
 
 
   <footer>
-    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: Srilekha</p>
+    <p>Copyright @ 2048 Villa Agency Co., Ltd. All rights reserved. Design: SRILEKHA JANGAM</p>
   </footer>
 
 
